[package]
name = "harmoneyes-console"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
harmoneyes-core = { path = "../harmoneyes-core" }
ratatui = "0.29.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-util = "0.7.15"
